--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ version: 7.1.0
 homepage: https://github.com/larryaasen/upgrader
 
 environment:
-  sdk: '>=2.18.6 <4.0.0'
-  flutter: ">=3.10.0"
+  sdk: '>=2.17.0 <4.0.0'
+  # flutter: ">=3.10.0"
 
 dependencies:
   flutter:
