--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,8 +4,8 @@ version: 1.0.0
 publish_to: none
 
 environment:
-  sdk: '>=2.17.1 <3.0.0'
-  flutter: ">=3.0.1"
+  sdk: '>=2.12.0 <3.0.0'
+  # flutter: ">=3.0.1"
 
 dependencies:
   flutter:
@@ -17,7 +17,7 @@ dependencies:
 
   go_router: ^7.1.1
 
-  http: ^1.0.0
+  http: ^0.13.0
 
 dev_dependencies:
   flutter_driver:
